objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Advisee Record</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Banner_Advising_Dashboard__c</fullName>
        <description>SN-000556 - used as the link to the banner course schedule for the student.</description>
        <formula>HYPERLINK(&quot;https://banner.stedwards.edu/StudentSelfService/ssb/studentProfile?studentId=&quot;&amp; Contact.External_ID__c  &amp; &quot;&amp;term=&quot; &amp; Banner_Term__c , &quot;Click to view&quot;)</formula>
        <label>Banner Advising Dashboard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Term__c</fullName>
        <description>SN-000556 - Used to create a deep link with Banner to view the course schedule for a student</description>
        <label>Banner Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used to capture the primary key from Banner.</description>
        <externalId>true</externalId>
        <label>Banner ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Registration_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to capture if a registration hold has been placed on the students record</description>
        <label>Registration Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Category__c</fullName>
        <description>The type of Case being tracked.</description>
        <inlineHelpText>The type of Case being tracked.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School Code of Conduct</fullName>
                </value>
                <value>
                    <fullName>School Violation</fullName>
                </value>
                <value>
                    <fullName>State Offense</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Location__c</fullName>
        <description>The location where the Case took place.</description>
        <inlineHelpText>The location where the Case took place.</inlineHelpText>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Off Campus</fullName>
                </value>
                <value>
                    <fullName>On Campus</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Occurrence_Date__c</fullName>
        <description>The date and time when the behavior event that triggered the Case occurred.</description>
        <inlineHelpText>The date and time when the behavior event that triggered the Case occurred.</inlineHelpText>
        <label>Occurrence Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfal__AdvisingPool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated Advising Pool record for Cases that originated from an Advising Pool. If the Case originated from a Queue owned by a User, this field is blank.</description>
        <inlineHelpText>The associated Advising Pool record for Cases that originated from an Advising Pool. If the Case originated from a Queue owned by a User, this field is blank.</inlineHelpText>
        <label>Advising Pool</label>
        <referenceTo>sfal__AdvisingPool__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__IsAdviseeRecord__c</fullName>
        <formula>IF(
    ISBLANK($Setup.sfal__SAL_Settings__c.sfal__Advisee_Record_RecordType__c),
    false,
    IF(
        CONTAINS(
            $Setup.sfal__SAL_Settings__c.sfal__Advisee_Record_RecordType__c,
            &quot;.&quot;
        ),
        $Setup.sfal__SAL_Settings__c.sfal__Advisee_Record_RecordType__c == RecordType.NamespacePrefix &amp; &quot;.&quot; &amp; RecordType.DeveloperName,
        ISBLANK(RecordType.NamespacePrefix) &amp;&amp; $Setup.sfal__SAL_Settings__c.sfal__Advisee_Record_RecordType__c == RecordType.DeveloperName
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Advisee Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__Location__c</fullName>
        <description>The location where the attendee can meet with someone.</description>
        <inlineHelpText>The location where the attendee can meet with someone.</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Proxy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the attendee is there on someone&apos;s behalf, such as a parent.</description>
        <inlineHelpText>When selected, the attendee is there on someone&apos;s behalf, such as a parent.</inlineHelpText>
        <label>Proxy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__Subtopic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The specific topic the attendee wants to discuss.</description>
        <label>Subtopic</label>
        <referenceTo>sfal__Topic__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The topic the attendee wants to discuss.</description>
        <inlineHelpText>The topic the attendee wants to discuss.</inlineHelpText>
        <label>Topic</label>
        <referenceTo>sfal__Topic__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Students</label>
    </listViews>
    <recordTypes>
        <fullName>AdviseeRecord</fullName>
        <active>true</active>
        <businessProcess>Advisee Record</businessProcess>
        <description>Used for the SAL product. Used by the Advisors to see the 360 degree view of the student.</description>
        <label>Advisee Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Case</fullName>
        <active>false</active>
        <businessProcess>Advisee Record</businessProcess>
        <description>Created as part of SAL for any future use cases where case management is used.</description>
        <label>Standard Case</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>